[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/task/task_detail.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/task/task_card.gd" type="Script" id=2]
[ext_resource path="res://addons/tilth_project_tracker/tilth/assets/icons/outline_mode_edit_black_24dp.png" type="Texture" id=3]

[node name="Panel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 400 )
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderPanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 56.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="MarginContainer" parent="VBoxContainer/HeaderPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 49.0
mouse_filter = 1
custom_constants/margin_right = 7
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 7

[node name="HLayout" type="HBoxContainer" parent="VBoxContainer/HeaderPanelContainer/Padding"]
margin_left = 5.0
margin_top = 5.0
margin_right = 989.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderPanelContainer/Padding/HLayout"]
margin_top = 8.0
margin_right = 470.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Task title"

[node name="IdLabel" type="Label" parent="VBoxContainer/HeaderPanelContainer/Padding/HLayout"]
margin_left = 474.0
margin_top = 8.0
margin_right = 944.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "# 01"
align = 2

[node name="EditButton" type="Button" parent="VBoxContainer/HeaderPanelContainer/Padding/HLayout"]
margin_left = 948.0
margin_right = 984.0
margin_bottom = 30.0
icon = ExtResource( 3 )
flat = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="Padding" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 523.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/Padding"]
margin_left = 10.0
margin_top = 10.0
margin_right = 986.0
margin_bottom = 506.0
rect_min_size = Vector2( 0, 100 )
scroll_horizontal_enabled = false

[node name="DescLabel" type="Label" parent="VBoxContainer/PanelContainer/Padding/ScrollContainer"]
margin_right = 976.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "This is some text
for a
description
"
autowrap = true

[node name="TaskDetail" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1366.0
margin_bottom = 768.0
